<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimens8">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/dimens8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimens8">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImgPhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="@dimen/dimens8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imageuserphoto"
                    android:transitionName="@string/imgUserPhoto"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardViewImgPhoto"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens8"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                app:layout_constraintStart_toStartOf="@id/txtUsername"
                app:layout_constraintTop_toBottomOf="@id/txtUsername"
                tools:text="@string/company" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtCompany"
                app:layout_constraintStart_toStartOf="@id/txtCompany"
                app:layout_constraintTop_toBottomOf="@id/txtCompany"
                tools:text="@string/location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>